# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_10_28_115441) do
+ActiveRecord::Schema[7.1].define(version: 2024_10_29_101413) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -53,8 +53,16 @@ ActiveRecord::Schema[7.1].define(version: 2024_10_28_115441) do
     t.datetime "updated_at", null: false
   end
 
+  create_table "permissions", force: :cascade do |t|
+    t.string "name"
+    t.string "description"
+    t.string "action"
+    t.boolean "is_deleted", default: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
   create_table "roles", force: :cascade do |t|
-    t.string "slug"
     t.string "name"
     t.text "description"
     t.boolean "is_active", default: true
